[package]
name = "wwind"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.4"
x11rb = "0.11.1"

[build-dependencies]
cfg_aliases = "0.1.1"

[features]
default = ["x11"]
x11 = []
xcb = []