[package]
name = "wwind"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(all(unix))'.dependencies]
x11rb = {version = "0.11.1", optional = true}

[target.'cfg(all(windows))'.dependencies]
once_cell = "1.17.1"
winapi = { version = "0.3.9", features = ["winuser", "windowsx", "handleapi"] }

[build-dependencies]
cfg_aliases = "0.1.1"

[features]
default = ["x11"]
x11 = ["dep:x11rb"]

[dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi", "errhandlingapi"] }
